[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
async-trait = "0.1.81"
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
mockall = "0.13.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
